--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "expo-haptics": "~15.0.7"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
