--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.8",
-    "expo-dev-client": "~6.0.12"
+    "expo-dev-client": "~6.0.12",
+    "expo-blur": "~15.0.7"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
