--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.8",
     "expo-dev-client": "~6.0.12",
-    "expo-blur": "~15.0.7"
+    "expo-blur": "~15.0.7",
+    "react-native-pager-view": "6.9.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
