--- a/.env.development
+++ b/.env.development
@@ -19,5 +19,5 @@ EXPO_PUBLIC_USE_MOCK_2FA=false
 # ==========================================
 # These credentials will be automatically filled in the login form
 # in development mode to reduce friction during testing
-EXPO_PUBLIC_DEV_EMAIL=zak@perihelia.io
-EXPO_PUBLIC_DEV_PASSWORD=password
+# EXPO_PUBLIC_DEV_EMAIL=zak@perihelia.io
+# EXPO_PUBLIC_DEV_PASSWORD=password
