--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,12 @@
 # Development Environment Variables
 
 # API Configuration
-EXPO_PUBLIC_API_URL=http://192.168.0.2:8000/api
+EXPO_PUBLIC_API_URL=https://admin.templemanchester.co.uk/api
 EXPO_PUBLIC_APP_NAME=TMA Admin
+
+# Mapbox Configuration
+# Get your access token from https://account.mapbox.com/
+EXPO_PUBLIC_MAPBOX_ACCESS_TOKEN=
 
 # 2FA Mock Mode (Development Only)
 # ===================================
