--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.8",
+    "@rnmapbox/maps": "^10.1.45",
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
     "expo": "~54.0.7",
+    "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.8",
+    "expo-dev-client": "~6.0.12",
     "expo-device": "^8.0.8",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
@@ -37,17 +40,16 @@
     "react-hook-form": "^7.62.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-graph": "^1.1.0",
     "react-native-otp-entry": "^1.8.5",
+    "react-native-pager-view": "6.9.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "zustand": "^5.0.8",
-    "expo-dev-client": "~6.0.12",
-    "expo-blur": "~15.0.7",
-    "react-native-pager-view": "6.9.1"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
