fix: lots o' updates

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # Development Environment Variables
 
 # API Configuration
-EXPO_PUBLIC_API_URL=https://admin.templemanchester.co.uk/api
+EXPO_PUBLIC_API_URL=http://192.168.0.2:8000/api
 EXPO_PUBLIC_APP_NAME=TMA Admin
 
 # Mapbox Configuration
