--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-svg": "^15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "expo-linear-gradient": "~15.0.7"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
