--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 # Development Environment Variables
 
 # API Configuration
-EXPO_PUBLIC_API_URL=https://admin.templemanchester.co.uk/api
+EXPO_PUBLIC_API_URL=https://admin-test.templemanchester.co.uk/api
 EXPO_PUBLIC_APP_NAME=TMA Admin
 
 # Mapbox Configuration
